# graphFS

./: .gitignore  .scanignore  LICENSE  README.md  RUST-TAURI-MIGRATION-PLAN.md  TECH-STACK.md  TODO-CLEANUP.md  TODO.md  backlog.md  main.js  package-lock.json  package.json  preload.js  pyproject.toml  wsl-admin-terminal.cmd
renderer/: colors.js  config.js  effects.js  graph-layout.js  index.html  memory.js  node-expansion.js  nodes.js  pixi-app.js  renderer.js  state.js  styles.css  tree-filter.js  ui.js
scripts/: build-context-menu.js  download-everything-cli.js
search-engines/: base-search-engine.js  everything-cli-engine.js  everything-search-engine.js  index.js  scan-filter.js  search-engine-manager.js
src/graphfs/: __init__.py  cli.py  models.py  scanner.py
